Estilos CSS listos, hechos con Sass.

--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
 	</section>
 
 	<!-- Secction Method Examples -->	
-	<section class="method">
+	<section class="method-examples">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6 col-xs-12 caja-method">
+				<div class="col-md-6 col-xs-12 caja-method-examples">
 					<img class="img-responsive" src="assets/img/sticky_conversations_3x2.max-1200x800.jpegquality-90.jpg" alt="">
 					<h4>Sticky Conversations</h4>
 					<p>Allo sticker sets balance the universal and unique</p>
 					<h6c class="cit">Case Study</h6>
 				</div>
-				<div class="col-md-6 col-xs-12 caja-method">
+				<div class="col-md-6 col-xs-12 caja-method-examples">
 					<img class="img-responsive" src="assets/img/digital_natives_3x2_6u46x7C.max-1200x800.jpegquality-90.jpg" alt="">
 					<h4>No Such Thing as Offline</h4>
 					<p>Digital naitves are redesigning the way we build tech one tap at a time</p>
@@ -128,13 +128,13 @@
 				</div>				
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-xs-12 caja-method">
+				<div class="col-md-6 col-xs-12 caja-method-examples">
 					<img class="img-responsive" src="assets/img/guide_to_span_la_3x2.max-1200x800.jpegquality-90.jpg" alt="">
 					<h4>Guide to SPAN Tokyo</h4>
 					<p>Watch archived video from our Tokyo event and get to know each of the speakers, including Deyan Sudjic, Mariya Suzuki, and Keiichi Tanaami</p>
 					<h6 class="cit">Guide</h6>
 				</div>	
-				<div class="col-md-6 col-xs-12 caja-method">
+				<div class="col-md-6 col-xs-12 caja-method-examples">
 					<img class="img-responsive" src="assets/img/airbnb_3x2.max-1200x800.jpegquality-90.jpg" alt="">
 					<h4>Airbnb: Communicating Clarity and Charm</h4>
 					<p>How a trusted travel app plays host to a growing, global community</p>
@@ -142,13 +142,13 @@
 				</div>								
 			</div>	
 			<div class="row">			
-				<div class="col-md-6 col-xs-12 caja-method">
+				<div class="col-md-6 col-xs-12 caja-method-examples">
 					<img class="img-responsive" src="assets/img/span_la_3x2.max-1200x800.jpegquality-90.jpg" alt="">
 					<h4>SPAN 2016: Los Angeles</h4>
 					<p>Explore everything from Processing and robotics to production design at our Los Angeles conference</p>
 					<img class="img-responsive" src="assets/img/icon-redirection.png" alt=""><h6 class="cit">design.google</h6>
 				</div>	
-				<div class="col-md-6 col-xs-12 caja-method">
+				<div class="col-md-6 col-xs-12 caja-method-examples">
 					<img class="img-responsive" src="assets/img/design_is_never_done_3x2_4gN.max-1200x800.jpegquality-90.jpg" alt="">
 					<h4>Design Is Never Done</h4>
 					<p>MAterual Design`s new suite of tools and guidelines-all in one place</p>
